# purl-tools

./: CHANGELOG.md  CONTRIBUTING.md  README.md  REUSE.toml  pyproject.toml  release-please-config.json  renovate.json5
.github/actions/uvbuild/: action.yaml
.github/workflows/: ci-security.yaml  publish.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
purltools/: __init__.py  _git.py  main.py  meta.py  purl2cd.py  repo_api.py  url_purl.py
tests/: __init__.py  test_git.py  test_meta.py  test_purl2cd.py  test_url_purl.py
