# SPDX-FileCopyrightText: 2025 DB Systel GmbH
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "purl-tools"
version = "0.2.5"
description = "A small library that supports with various tasks around Package URLs"
authors = [{ name = "Max Mehl", email = "max.mehl@deutschebahn.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "compliance",
    "clearlydefined",
    "purl",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "packageurl-python>=0.17.5,<0.18",
    "requests>=2.32.5,<3",
]

[project.urls]
Repository = "https://github.com/OpenRailAssociation/purl-tools"

[project.scripts]
purl-tools = "purltools.main:_cli"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "bump-my-version>=1.2.3,<2",
    "pytest>=9.0.0,<10",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["purltools"]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests", "purltools"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T",
    "FBT",
    "LOG015",
    "COM812",
    "ERA001",
    "S310",
    "D205",
    "D212",
    "PTH123",
]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR", "PT011", "ANN001"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["purltools"]

# Bump-My-Version
[tool.bumpversion]
commit = true
tag = true
sign_tags = true
allow_dirty = false
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "uv.lock"
search = """
[[package]]
name = "purl-tools"
version = "{current_version}"
"""
replace = """
[[package]]
name = "purl-tools"
version = "{new_version}"
"""
